k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mhras-api
  labels:
    app: mhras
    component: api
spec:
  type: ClusterIP
  selector:
    app: mhras
    component: api
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: mhras-api-headless
  labels:
    app: mhras
    component: api
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mhras
    component: api
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
